--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.dicerollerjuly31"
-        minSdk 21
+        applicationId "com.example.dice"
+        minSdk 24
         targetSdk 32
         versionCode 1
         versionName "1.0"
